--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       while (testV < 3) {
         if (!pass1)
           history.go(-1);
-        if (pass1.toLowerCase() == "Guest") {
+        if (pass1.toLowerCase() == "Smart") {
           alert('Password Correct');
           window.open("Yournextpage.html");
           break;
@@ -19,3 +19,4 @@
       return " ";
     }
     </script>
+    <input type="button" class="btn btn-default btn-lg" value="Log In" onClick="passWord()">
