--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Header -->
     <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-        <h1 class="w3-margin w3-jumbo">My Math Quiz</h1>
+        <h1 class="w3-margin w3-jumbo">Test Bed</h1>
     </header>
 
     <!-- First Grid -->
