--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="w3-top">
         <div class="w3-bar w3-red w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="https://my-math-quiz.github.io/Beta/home-page-beta/Home-page-beta.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-            <a href="https://my-math-quiz.github.io/Beta/Geometry-beta/geometry-beta.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Math</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Science</a>
-            <a href="https://my-math-quiz.github.io/Beta/history/history-page-beta.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">History</a>
-            <a href="https://my-math-quiz.github.io/Beta/Spanish/spanish-beta.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Spanish</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">English</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Map</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 4</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 5</a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 6</a>
         </div>
 
         <!-- Navbar on small screens -->
