--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
         <div class="w3-content">
             <div class="w3-twothird">
                 <h1>What We Do</h1>
-                <h5 class="w3-padding-32">We create quizes for your use!</h5>
+                <h5 class="w3-padding-32">We show you where to be</h5>
 
-                <p class="w3-text-grey">We will provide a variety of quiz questions in each subject and a varietry of questions covering different topics in those subjects. Feel free to have a look at what all is here.
-                </p>
+                <p class="w3-text-grey">Look at where you could be and what it is like in that area from your phone!</p>
             </div>
 
             <div class="w3-third w3-center">
@@ -85,7 +84,7 @@
 
             <div class="w3-twothird">
                 <h1>about us</h1>
-                <h5 class="w3-padding-32">We are a small group from a school working on a project to create quizes and a website for each subject. We want our website to be enjoyable and of your use.</h5>
+                <h5 class="w3-padding-32">small bio about project</h5>
 
                 <p class="w3-text-grey"></p>
             </div>
@@ -93,7 +92,7 @@
     </div>
 
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">Quote: Education is a passport to the future.</h1>
+        <h1 class="w3-margin w3-xlarge">Quote: Safy in knowing where you are at is key</h1>
     </div>
 
     <!-- Footer -->
