--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">map</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large">Map</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">About us</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">button 3</a>
-            <a href="https://my-math-quiz.github.io/Beta/Spanish/spanish-beta.html" class="w3-bar-item w3-button w3-padding-large">Spanish</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">button 4</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 4</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large">button 5</a>
         </div>
     </div>
 
