--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Header -->
-    <header class="w3-container w3-white w3-center" style="padding:128px 16px">
+    <header class="w3-container w3-red w3-center" style="padding:128px 16px">
         <h1 class="w3-margin w3-jumbo">Test Bed</h1>
     </header>
 
