--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="w3-bar w3-red w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Map</a>
+            <a href="https://smart-poles-beta.github.io/maps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Map</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 4</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 5</a>
@@ -47,7 +47,7 @@
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Map</a>
+            <a href="https://smart-poles-beta.github.io/maps.html" class="w3-bar-item w3-button w3-padding-large">Map</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">About us</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 4</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">button 5</a>
