--- a/maps.html
+++ b/maps.html
@@ -75,7 +75,7 @@
     </footer>
 
     <script>
-        // Used to toggle the menu on small screens when clicking on the menu button
+        // menu toggle for small screens
         function myFunction() {
             var x = document.getElementById("navDemo");
             if (x.className.indexOf("w3-show") == -1) {
