--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
             <a href="https://smart-poles-beta.github.io/maps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Map</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
+            <a href="https://smart-poles-beta.github.io/aboutus.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 4</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 5</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 6</a>
