--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
             <a href="https://smart-poles-beta.github.io/maps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Map</a>
             <a href="https://smart-poles-beta.github.io/aboutus.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About us</a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 4</a>
+            <a href="https://smart-poles-beta.github.io/Trends.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Trends</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 5</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 6</a>
         </div>
