--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="https://smart-poles-beta.github.io/maps.html" class="w3-bar-item w3-button w3-padding-large">Map</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">About us</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 4</a>
+            <a href="https://smart-poles-beta.github.io/aboutus.html" class="w3-bar-item w3-button w3-padding-large">About us</a>
+            <a href="https://smart-poles-beta.github.io/Trends.html" class="w3-bar-item w3-button w3-padding-large">Trends</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">button 5</a>
         </div>
     </div>
