--- a/maps.html
+++ b/maps.html
@@ -32,6 +32,10 @@
     .fa-coffee {
         font-size: 200px
     }
+    #map {
+        width: 90vw;
+        height: 90vh;
+    }
 </style>
 
 <body>
