--- a/maps.html
+++ b/maps.html
@@ -69,7 +69,7 @@
     </header>
     
     <main>
-        <div id="map"></div>
+        <div align="center" id="map"></div>
         <script>
             mapboxgl.accessToken = 'pk.eyJ1IjoiamFjb2JoMTI0NSIsImEiOiJjanQ2NjF2YzMwZHR0NDNxeHhudDg1cW8wIn0.7cYit7_59VEJL--ZTc9fNA';
             var map = new mapboxgl.Map({
