--- a/maps.html
+++ b/maps.html
@@ -69,7 +69,7 @@
     </header>
     
     
-        <div class="mapouter">
+        <div align="center" class="mapouter">
             <div class="gmap_canvas">
                 <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=701%20E%20M%20L%20King%20Blvd%2C%20Chattanooga%2C%20TN%2037403&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                 </iframe>
