moble navbar update

--- a/maps.html
+++ b/maps.html
@@ -46,18 +46,18 @@
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="https://smart-poles-beta.github.io/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
             <a href="https://smart-poles-beta.github.io/aboutus.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Us</a>
-            <a href="https://smart-poles-beta.github.io/Trends.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Treds</a>
+            <a href="https://smart-poles-beta.github.io/Trends.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Trends</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 4</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 5</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Button 6</a>
         </div>
 
-        <!-- Navbar on small screens -->
+        <!-- Mobile navbar -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
             <a href="https://smart-poles-beta.github.io/" class="w3-bar-item w3-button w3-padding-large">Home</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Map</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 2</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 3</a>
+            <a href="https://smart-poles-beta.github.io/aboutus.html" class="w3-bar-item w3-button w3-padding-large">About US</a>
+            <a href="https://smart-poles-beta.github.io/Trends.html" class="w3-bar-item w3-button w3-padding-large">Trends</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 4</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">Button 5</a>
         </div>
