--- a/maps.html
+++ b/maps.html
@@ -78,6 +78,7 @@
             <style>
                 .mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
             </style>
+        </div>
     </div>    
 
     <!-- Footer -->
