--- a/maps.html
+++ b/maps.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Map</title>
+<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Car_with_Driver-Silhouette.svg/1221px-Car_with_Driver-Silhouette.svg.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
