--- a/aboutus.html
+++ b/aboutus.html
@@ -62,6 +62,9 @@
     <header class="w3-container w3-red w3-center" style="padding:128px 16px">
         <h1 class="w3-margin w3-jumbo">About Us</h1>
     </header>
+    <div align="center">
+        <p>Hello woody</P>
+    </div>
 
     <!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity">
