--- a/aboutus.html
+++ b/aboutus.html
@@ -63,7 +63,7 @@
         <h1 class="w3-margin w3-jumbo">About Us</h1>
     </header>
     <div align="center">
-        <p>Hello woody</P>
+        <p> Comming Soon</p>
     </div>
 
     <!-- Footer -->
