--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
     </footer>
+    <p align="right">v1.3</p>
 
     <script>
         // Used to toggle the menu on small screens when clicking on the menu button
