--- a/aboutus.html
+++ b/aboutus.html
@@ -77,6 +77,7 @@
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
     </footer>
+        <p align="right">v1.3</p>
 
     <script>
         // menu toggle for small screens
