--- a/maps.html
+++ b/maps.html
@@ -93,6 +93,7 @@
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
     </footer>
+	<p align="right">v1.3</p>
 
     <script>
         // menu toggle for small screens
