--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
 
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">Quote: Safy in knowing where you are at is key</h1>
+        <h1 class="w3-margin w3-xlarge">Quote: Safety in knowing where you are at is key</h1>
     </div>
 
     <!-- Footer -->
