--- a/Trends.html
+++ b/Trends.html
@@ -64,7 +64,7 @@
     </header>
     
     <!-- Trend data -->
-   <p align="center">MLK Blvd</p>
+   <h1 align="center">MLK Blvd</h1>
     <div>
     <script src="https://beam.venngage.com/embed.js?v=1.0.2" data-beam-id="6f253c8e-427d-45f2-94a4-bded2931acc1"></script>
     </div>
